Fixed z-index on sticky message

--- a/admin/frontend/styles/base.scss
+++ b/admin/frontend/styles/base.scss
@@ -123,7 +123,7 @@ body {
     cursor: pointer;
     text-align: center;
     width: 40px;
-    z-index: 3;
+    z-index: 11;
 }
 
 .side-filters {
@@ -436,6 +436,7 @@ pre.json {
     cursor: pointer;
     text-align: center;
     width: 40px;
+    z-index: 11;
 }
 
 .z100 {
@@ -684,7 +685,7 @@ tr {
 .sticky-msg {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 10;
 }
 
 .notification.is-white {
