--- a/app/frontend/styles/base.scss
+++ b/app/frontend/styles/base.scss
@@ -122,7 +122,7 @@ body {
     border-radius: 5px 0px 0px 5px;
     cursor: pointer;
     text-align: center;
-    z-index: 3;
+    z-index: 11;
 }
 
 .side-filters {
@@ -447,6 +447,7 @@ a.navbar-item:hover {
     cursor: pointer;
     text-align: center;
     width: 40px;
+    z-index: 11;
 }
 
 .z100 {
@@ -775,7 +776,7 @@ tr {
 .sticky-msg {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 10;
 }
 
 .notification.is-white {
